; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_image.c_translate_image_channel.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_image.c_translate_image_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @translate_image_channel(i64 %0, i32 %1, float %2) #0 {
  %4 = alloca %struct.TYPE_5__, align 4
  %5 = alloca i32, align 4
  %6 = alloca float, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca float, align 4
  %10 = bitcast %struct.TYPE_5__* %4 to i64*
  store i64 %0, i64* %10, align 4
  store i32 %1, i32* %5, align 4
  store float %2, float* %6, align 4
  store i32 0, i32* %8, align 4
  br label %11

11:                                               ; preds = %43, %3
  %12 = load i32, i32* %8, align 4
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp slt i32 %12, %14
  br i1 %15, label %16, label %46

16:                                               ; preds = %11
  store i32 0, i32* %7, align 4
  br label %17

17:                                               ; preds = %39, %16
  %18 = load i32, i32* %7, align 4
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = icmp slt i32 %18, %20
  br i1 %21, label %22, label %42

22:                                               ; preds = %17
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = load i32, i32* %5, align 4
  %26 = bitcast %struct.TYPE_5__* %4 to i64*
  %27 = load i64, i64* %26, align 4
  %28 = call float @get_pixel(i64 %27, i32 %23, i32 %24, i32 %25)
  store float %28, float* %9, align 4
  %29 = load float, float* %9, align 4
  %30 = load float, float* %6, align 4
  %31 = fadd float %29, %30
  store float %31, float* %9, align 4
  %32 = load i32, i32* %7, align 4
  %33 = load i32, i32* %8, align 4
  %34 = load i32, i32* %5, align 4
  %35 = load float, float* %9, align 4
  %36 = bitcast %struct.TYPE_5__* %4 to i64*
  %37 = load i64, i64* %36, align 4
  %38 = call i32 @set_pixel(i64 %37, i32 %32, i32 %33, i32 %34, float %35)
  br label %39

39:                                               ; preds = %22
  %40 = load i32, i32* %7, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %7, align 4
  br label %17

42:                                               ; preds = %17
  br label %43

43:                                               ; preds = %42
  %44 = load i32, i32* %8, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %8, align 4
  br label %11

46:                                               ; preds = %11
  ret void
}

declare dso_local float @get_pixel(i64, i32, i32, i32) #1

declare dso_local i32 @set_pixel(i64, i32, i32, i32, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
